--- a/html/dalmation-leaping-through-air.html
+++ b/html/dalmation-leaping-through-air.html
@@ -75,7 +75,7 @@
     <div id="container">
         <div id="photo-container">
             <!-- Insert your photo here -->
-            <img src="../pics/scans/dalmation-leaping-through-air.png" alt="Dalmation soars through the air, mid-leap." style="max-width: 650px;">
+            <img src="../pics/scans/dalmation-leaping-through-air.png" alt="Dalmation soars through the air, mid-leap." style="max-width: 650px; border: 2px solid;">
         </div>
 
         <div class="input-char-counter-container">
