--- a/html/geese-in-golden-sky.html
+++ b/html/geese-in-golden-sky.html
@@ -75,7 +75,7 @@
     <div id="container">
         <div id="photo-container">
             <!-- Insert your photo here -->
-            <img src="../pics/scans/geese-flying-through-a-golden-sky.png" alt="Geese flying through a golden sky." style="max-width: 650px;">
+            <img src="../pics/scans/geese-flying-through-a-golden-sky.png" alt="Geese flying through a golden sky." style="max-width: 650px; border: 2px solid;">
         </div>
 
         <div class="input-char-counter-container">
