--- a/html/ladybugsondaisies.html
+++ b/html/ladybugsondaisies.html
@@ -76,7 +76,7 @@
     <div id="container">
         <div id="photo-container">
             <!-- Insert your photo here -->
-            <img src="../pics/scans/ladybugs-on-daisies.png" alt="2 ladybugs visit white daisies in front of wooden fence with peeling green paint." style="max-width: 650px;">
+            <img src="../pics/scans/ladybugs-on-daisies.png" alt="2 ladybugs visit white daisies in front of wooden fence with peeling green paint." style="max-width: 650px; border: 2px solid;">
         </div>
 
         <div class="input-char-counter-container">
