--- a/html/practice.html
+++ b/html/practice.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="https://use.typekit.net/fgh5uly.css">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Lora?stroke=Serif">
 
+    <style>
+
+        </style>
+
 </head>
 <body>
 
@@ -57,47 +61,47 @@
 
         <div class="practice-photo-container">
             <a href="ladybugsondaisies.html">
-                <img class="practice-photo" src="../pics/scans/ladybugs-on-daisies.png" alt="2 ladybugs visit white daisies in front of wooden fence with peeling green paint." style="width: 60%; padding-top: 40px; padding-bottom: 40px;">
+                <img class="practice-photo" src="../pics/scans/ladybugs-on-daisies.png" alt="2 ladybugs visit white daisies in front of wooden fence with peeling green paint." style="width: 60%; margin-top: 40px; margin-bottom: 40px; border: 2px solid;">
             </a>
 
         </div> <!-- practice photo container -->
 
         <div class="practice-photo-container">
             <a href="dalmation-leaping-through-air.html">
-                <img class="practice-photo" src="../pics/scans/dalmation-leaping-through-air.png" alt="Dalmation soars through the air, mid-leap." style="width: 60%; padding-top: 40px; padding-bottom: 40px;">
+                <img class="practice-photo" src="../pics/scans/dalmation-leaping-through-air.png" alt="Dalmation soars through the air, mid-leap." style="width: 60%; margin-top: 40px; margin-bottom: 40px; border: 2px solid;">
             </a>
         </div>
 
         <div class="practice-photo-container">
             <a href="geese-in-golden-sky.html">
-                <img class="practice-photo" src="../pics/scans/geese-flying-through-a-golden-sky.png" alt="Geese flying through a golden sky." style="width: 60%; padding-top: 40px; padding-bottom: 40px;">
+                <img class="practice-photo" src="../pics/scans/geese-flying-through-a-golden-sky.png" alt="Geese flying through a golden sky." style="width: 60%; margin-top: 40px; margin-bottom: 40px; border: 2px solid;">
             </a>
         </div>
 
 
         <div class="practice-photo-container">
             <a href="sunflowers.html">
-                <img class="practice-photo" src="../pics/scans/giant-sunflowers-against-blue-sky.jpg" alt="Giant sunflowers against a bright blue sky." style="width: 60%; padding-top: 40px; padding-bottom: 40px;">
+                <img class="practice-photo" src="../pics/scans/giant-sunflowers-against-blue-sky.jpg" alt="Giant sunflowers against a bright blue sky." style="width: 60%; margin-top: 40px; margin-bottom: 40px; border: 2px solid;">
             </a>
         </div>
 
 
         <div class="practice-photo-container">
             <a href="penguins.html">
-                <img class="practice-photo" src="../pics/scans/penguins.jpg" alt="Group of penguins standing on a rocky surface in front of calm water that reflects their images like a mirror." style="width: 40%; padding-top: 40px; padding-bottom: 40px;">
+                <img class="practice-photo" src="../pics/scans/penguins.jpg" alt="Group of penguins standing on a rocky surface in front of calm water that reflects their images like a mirror." style="width: 40%; margin-top: 40px; margin-bottom: 40px; border: 2px solid;">
             </a>
         </div>
 
         <div class="practice-photo-container">
             <a href="puppies.html">
-                <img class="practice-photo" src="../pics/scans/yellow-lab-puppies.png" alt="3 yellow lab puppies peeking out of a barn." style="width: 40%; padding-top: 40px; padding-bottom: 40px;">
+                <img class="practice-photo" src="../pics/scans/yellow-lab-puppies.png" alt="3 yellow lab puppies peeking out of a barn." style="width: 40%; margin-top: 40px; margin-bottom: 40px; border: 2px solid;">
             </a>
         </div>
 
 
             <a href="ripple.html">
                 <figure class="image-center">
-                <img class="practice-photo" src="../pics/homepage-pics/singular-ripple-in-lake.jpg" alt="Singular ripple in calm water that reflects tree line." style="width: 70%; padding-top: 20px; padding-bottom: 20px;"> 
+                <img class="practice-photo" src="../pics/homepage-pics/singular-ripple-in-lake.jpg" alt="Singular ripple in calm water that reflects tree line." style="width: 70%; margin-top: 20px; margin-bottom: 20px; border: 2px solid;"> 
                     <figcaption style="position: relative; bottom: 15px; padding-bottom: 20px;"> 
                         <a href="https://www.are.na/block/1808883" target="_blank" rel="noopener noreferrer">Image Source</a>
                     </figcaption>
@@ -108,7 +112,7 @@
 
             <a href="cats-in-flower-crowns.html">
                 <figure class="image-center">
-                    <img  class="practice-photo" src="../pics/cats-with-flower-crowns.jpg" alt="Two smiling cats weaing daisy-like flower crowns cuddle together on tree-stumps in a forest." style="width: 100%; padding-top: 20px; padding-bottom: 20px;"> 
+                    <img  class="practice-photo" src="../pics/cats-with-flower-crowns.jpg" alt="Two smiling cats weaing daisy-like flower crowns cuddle together on tree-stumps in a forest." style="width: 100%; margin-top: 20px; margin-bottom: 20px; border: 2px solid;"> 
                         <figcaption style="padding-bottom: 30px; position: relative; bottom: 15px;"> 
                             <a href="https://www.tumblr.com/cybergata/121802161240/shironeko-kuro-mimi-toro-and-a-chibi-brother" target="_blank" rel="noopener noreferrer">Image Source</a>
                         </figcaption>
