--- a/html/ripple.html
+++ b/html/ripple.html
@@ -76,7 +76,7 @@
     <div id="container">
         <div id="photo-container">
             <!-- Insert your photo here -->
-            <img src="../pics/homepage-pics/singular-ripple-in-lake.jpg" alt="Giant sunflowers against a bright blue sky." style="max-width: 650px;">
+            <img src="../pics/homepage-pics/singular-ripple-in-lake.jpg" alt="Giant sunflowers against a bright blue sky." style="max-width: 650px; border: 2px solid;">
         </div>
 
         <div class="input-char-counter-container">
