--- a/index.html
+++ b/index.html
@@ -70,33 +70,33 @@
 
     <div class="photo-container">
 
-        <img src="pics/scans/black-and-white-dolphins.png" alt="" style="width: 40%;">
+        <img src="pics/scans/black-and-white-dolphins.png" alt="Black and white photo of a few dolphins slightly breaching out of the ocean." style="width: 40%;">
 
-        <img src="pics/scans/whale-tail.png" alt="" style=" width: 10%; height: 10%; position: relative; top: 242px;">
+        <img src="pics/scans/whale-tail.png" alt="The tail of a whale preparing to flop against the water's surface." style=" width: 10%; height: 10%; position: relative; top: 242px;">
 
-        <img src="pics/scans/tiny-daisy.png" alt="" style="width: 7%; height: 7%; margin-right: 300px; position: relative; top: 307px;">
+        <img src="pics/scans/tiny-daisy.png" alt="Tiny daisy." style="width: 7%; height: 7%; margin-right: 300px; position: relative; top: 307px;">
 
-    <img src="pics/scans/autumn-comes-to-the-plains.jpg" alt="" style="width: 35%; height: 55%; ">
+    <img src="pics/scans/autumn-comes-to-the-plains.jpg" alt="A winding river weaves through golden plains. Caption reads 'Autumn comes to the plains'." style="width: 35%; height: 55%; ">
 
-    <img src="pics/scans/winter-comes-to-the-mountains.jpg" alt="" style="width: 35%; height: 55%; margin-right: 200px;">
+    <img src="pics/scans/winter-comes-to-the-mountains.jpg" alt="Snow covers and clings to the branches of trees that stand amongst a snow-covered slope. Caption reads 'Winter comes to the mountains'." style="width: 35%; height: 55%; margin-right: 200px;">
 
-    <img src="pics/scans/horse-and-cow-on-farm.png" alt="" style="width: 30%; height: 40%;">
+    <img src="pics/scans/horse-and-cow-on-farm.png" alt="High contrast, highly saturated shot of a cow and a horse walking through a lush, green farm." style="width: 30%; height: 40%;">
 
-    <img src="pics/scans/cranes-flying.png" alt="" style="width: 30%; height: 30%; margin-right: 300px;">
+    <img src="pics/scans/cranes-flying.png" alt="Seven white cranes with black underwings and small red patches by their eyes fly through a light blue sky." style="width: 30%; height: 30%; margin-right: 300px;">
 
-    <img src="pics/scans/cloud-of-flowers.png" alt="" style="width: 30%;">
+    <img src="pics/scans/cloud-of-flowers.png" alt="Small, delicate white flowers grow tall, covering a fence. Caption reads 'Paul Farges clematis produces clouds of flowers'." style="width: 30%;">
 
-    <img src="pics/scans/bee-on-yellow-flower.png" alt="" style="width: 27%; height: 27%; margin-right: 500px; position: relative; bottom: 115px;">
+    <img src="pics/scans/bee-on-yellow-flower.png" alt="A bee visits a yellow flower." style="width: 27%; height: 27%; margin-right: 500px; position: relative; bottom: 115px;">
 
     <!-- <img src="pics/scans/vulture-soaring-through-mountain-range.jpg" alt="" style="width: 30%; height: 30%;"> -->
     
 
   
-    <img src="pics/scans/flamingos-preparing-for-liftoff.png" alt="" style="width: 30%; margin-bottom: 100px;">
+    <img src="pics/scans/flamingos-preparing-for-liftoff.png" alt="A group of flamingos begin to fly over a sandy beach with vibrant blue water." style="width: 30%; margin-bottom: 125px;">
 
 
 
-    <img src="pics/scans/museum-of-everyday-life.jpg" alt="" style="width: 24%; height: 24%; position: relative; bottom: 165px;">
+    <img src="pics/scans/museum-of-everyday-life.jpg" alt="Wooden building with peeling white paint sits behind a partially snow covered ground. On the building are black painted seagulls that are flying and the hand-painted words 'The museum of every day life'." style="width: 24%; height: 24%; position: relative; bottom: 165px;">
 
 
 
@@ -149,7 +149,7 @@
             <p>A website about <br> alt text / image description </p>
         </div>
 
-        <img src="" alt="" style="width: 20vw; height: 100%;">
+        <img src="pics/scans/homepage-right-side.jpg" alt="" style="width: 20vw; height: 100%; border: 2px solid;">
     </div>
 
 </div>
