--- a/html/penguins.html
+++ b/html/penguins.html
@@ -75,7 +75,7 @@
     <div id="container">
         <div id="photo-container">
             <!-- Insert your photo here -->
-            <img src="../pics/scans/penguins.jpg" alt="Group of penguins standing on a rocky surface in front of calm water that reflects their images like a mirror." style="max-width: 400px;">
+            <img src="../pics/scans/penguins.jpg" alt="Group of penguins standing on a rocky surface in front of calm water that reflects their images like a mirror." style="max-width: 400px; border: 2px solid;">
         </div>
 
         <div class="input-char-counter-container">
