--- a/html/puppies.html
+++ b/html/puppies.html
@@ -75,7 +75,7 @@
     <div id="container">
         <div id="photo-container">
             <!-- Insert your photo here -->
-            <img src="../pics/scans/yellow-lab-puppies.png" alt="3 yellow lab puppies peeking out of a barn." style="max-width: 400px;">
+            <img src="../pics/scans/yellow-lab-puppies.png" alt="3 yellow lab puppies peeking out of a barn." style="max-width: 400px; border: 2px solid;">
         </div>
 
         <div class="input-char-counter-container">
