--- a/html/sunflowers.html
+++ b/html/sunflowers.html
@@ -75,7 +75,7 @@
     <div id="container">
         <div id="photo-container">
             <!-- Insert your photo here -->
-            <img src="../pics/scans/giant-sunflowers-against-blue-sky.jpg" alt="Giant sunflowers against a bright blue sky." style="max-width: 650px;">
+            <img src="../pics/scans/giant-sunflowers-against-blue-sky.jpg" alt="Giant sunflowers against a bright blue sky." style="max-width: 650px; border: 2px solid;">
         </div>
 
         <div class="input-char-counter-container">
