1,000 words so close yet so far

--- a/html/cats-in-flower-crowns.html
+++ b/html/cats-in-flower-crowns.html
@@ -76,7 +76,7 @@
     <div id="container">
         <div id="photo-container">
             <!-- Insert your photo here -->
-            <img src="../pics/cats-with-flower-crowns.jpg" alt="Two smiling cats weaing daisy-like flower crowns cuddle together on tree-stumps in a forest." style="max-width: 650px;">
+            <img src="../pics/cats-with-flower-crowns.jpg" alt="Two smiling cats weaing daisy-like flower crowns cuddle together on tree-stumps in a forest." style="max-width: 650px; border: 2px solid;">
         </div>
 
         <div class="input-char-counter-container">
