--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <p>A website about <br> alt text / image description </p>
         </div>
 
-        <img src="pics/scans/homepage-right-side.jpg" alt="" style="width: 20vw; height: 100%; border: 2px solid;">
+        <img src="pics/scans/homepage-right-side.jpg" alt="" style="width: 20vw; height: 100%; border: 2px solid black;" >
     </div>
 
 </div>
