fixed a few things

--- a/html/dalmation-leaping-through-air.html
+++ b/html/dalmation-leaping-through-air.html
@@ -109,10 +109,12 @@
 
 <div class="right-section">
     <div class="top-menu" id="customizeMenu">
-        <button class="menu-button" onclick="toggleCustomize()" style="display: flex; justify-content: flex-start;"> 
-            <img class="customize-icon-light-mode" src="../pics/customize.png" alt="Customize page."> 
-            <img class="customize-icon-dark-mode" src="../pics/customize-2.png" alt="Customize page."> 
+
+        <button class="menu-button" onclick="toggleCustomize()">  
+            <span class="customize-icon"></span>
+             <span class="mobile-disappear"> Customize page </span>
         </button>
+
         <button class="close-button" onclick="toggleCustomize()">&times;</button>
         <div class="customize">
             <div class="font-selector">
