--- a/html/index-old-changed-on-april-18th.html
+++ b/html/index-old-changed-on-april-18th.html
@@ -114,10 +114,9 @@
     <div class="right-section">
 
         <div class="top-menu" id="customizeMenu" style="border-left: 2px solid;">
-
-            <button class="menu-button" onclick="toggleCustomize()">  
-                <span class="customize-icon"></span>
-                 <span class="mobile-disappear"> Customize page </span>
+            <button class="menu-button" onclick="toggleCustomize()" style="display: flex; justify-content: flex-start;"> 
+                <img class="customize-icon-light-mode" src="pics/customize.png" alt="Customize page." style="border: none;"> 
+                <img class="customize-icon-dark-mode" src="pics/customize-2.png" alt="Customize page." style="border: none;"> 
             </button>
 
             <button class="close-button" onclick="toggleCustomize()">&times;</button>
@@ -147,13 +146,8 @@
         </div>
 
         <div class="title">
-            <div style="display: flex; justify-content: center; align-items: center; align-content: center;">
-            <h1>1,000 words</h1>
-            </div>
-
-            <div>
+            <h1> 1,000 words </h1>
             <p>A website about <br> alt text / image description </p>
-            </div>
         </div>
 
         <img src="pics/scans/homepage-right-side.jpg" alt="" style="width: 20vw; height: 100%; border: 2px solid black;" >
