--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
         </div>
 
         <div class="title">
-            <div style="display: flex; justify-content: center; align-items: center; align-content: center;">
+            
+            <div>
             <h1>1,000 words</h1>
             </div>
 
