--- a/index.html
+++ b/index.html
@@ -70,12 +70,15 @@
 
     <div class="photo-container">
 
+    <div style="display: flex; align-items:flex-end; gap: 10px;">
 
     <img src="pics/scans/black-and-white-dolphins.png" alt="Black and white photo of a few dolphins slightly breaching out of the ocean." style="width: 40%;">
 
-    <img src="pics/scans/whale-tail.png" alt="The tail of a whale preparing to flop against the water's surface." style=" width: 10%; height: 10%; position: relative; top: 242px;">
+    <img src="pics/scans/whale-tail.png" alt="The tail of a whale preparing to flop against the water's surface." style=" width: 10%;">
 
-    <img src="pics/scans/tiny-daisy.png" alt="Tiny daisy." style="width: 7%; height: 7%; margin-right: 300px; position: relative; top: 307px;">
+    <img src="pics/scans/tiny-daisy.png" alt="Tiny daisy." style="width: 7%; margin-right: 300px;">
+
+    </div>
 
     <img src="pics/scans/autumn-comes-to-the-plains.jpg" alt="A winding river weaves through golden plains. Caption reads 'Autumn comes to the plains'." style="width: 35%; height: 55%; ">
 
