--- a/html/geese-in-golden-sky.html
+++ b/html/geese-in-golden-sky.html
@@ -55,6 +55,8 @@
     <div class="middle-section middle-section-practice-photos" style="padding-bottom: 170px;">
 
         <h1 style="text-align: center; margin-bottom: 20px;"> Practice</h1>
+        
+        <div class="breathing-room"></div>
 
     <p class="instructions">If you were writing alt text or an image description of the photo below, what would you write? It's okay if this feels clumsy at first, that's normal!
     </p>
