--- a/html/intro-to-alt-text.html
+++ b/html/intro-to-alt-text.html
@@ -53,6 +53,8 @@
  
         <h1 style="text-align: center;">An Introduction to Alt Text</h1>
 
+        <div class="breathing-room"></div>
+
         <div class="main-text-container">
         
         <p style="padding-top: 30px;"> <b>Alt text</b> (short for alternative text) is a <b>written description of an image displayed on a digital device with a screen </b> (such as a computer, smartphone or tablet).</p>
