--- a/html/practice.html
+++ b/html/practice.html
@@ -56,6 +56,9 @@
     <div class="middle-section">
         <div class="main-text-container">
         <h1 style="text-align: center; margin-bottom: 20px;">Practice</h1>
+
+        <div class="breathing-room"></div>
+        
         <p> 
             Click on the photo you'd like to practice describing. </p>
 
