--- a/html/resource-library.html
+++ b/html/resource-library.html
@@ -52,6 +52,8 @@
         <div class="main-text-container">
         <h1 style="text-align: center; margin-bottom: 20px; position: relative; right: 6.5px;"> Resource Library / Sources </h1>
 
+        <div class="breathing-room"></div>
+
         <!-- <ul>
             <li> 
                 <a href=""> </a>
