--- a/html/about.html
+++ b/html/about.html
@@ -53,6 +53,8 @@
         <div class="main-text-container">
         <h1 style="text-align: center;">About</h1>
 
+        <div class="breathing-room"></div>
+
         <p style="padding-top: 40px;">
         Hi! My name is Meghan and this is my senior thesis project for the BFA Graphic Design program at Virginia Commonwealth University. 
         It's ultimately meant to be a conversation starter surrounding the concepts of alt text and image description.<br><br>
