--- a/html/sunflowers.html
+++ b/html/sunflowers.html
@@ -56,6 +56,8 @@
 
         <h1 style="text-align: center; margin-bottom: 20px;"> Practice</h1>
 
+        <div class="breathing-room"></div>
+
     <p class="instructions">If you were writing alt text or an image description of the photo below, what would you write? It's okay if this feels clumsy at first, that's normal!
     </p>
 
