--- a/html/intro-to-alt-text.html
+++ b/html/intro-to-alt-text.html
@@ -57,7 +57,7 @@
 
         <div class="main-text-container">
         
-        <p style="padding-top: 30px;"> <b>Alt text</b> (short for alternative text) is a <b>written description of an image displayed on a digital device with a screen </b> (such as a computer, smartphone or tablet).</p>
+        <p> <b>Alt text</b> (short for alternative text) is a <b>written description of an image displayed on a digital device with a screen </b> (such as a computer, smartphone or tablet).</p>
 
         <p> Alt text makes visual content (such as pictures) accessible to people who can’t see / process such content, for whatever reason. 
         </p>
