--- a/html/resource-library.html
+++ b/html/resource-library.html
@@ -49,10 +49,12 @@
     </div>
 
     <div class="middle-section" style="padding-bottom: 45px;">
-        <div class="main-text-container">
-        <h1 style="text-align: center; margin-bottom: 20px; position: relative; right: 6.5px;"> Resource Library / Sources </h1>
+     
+        <h1 style="text-align: center; position: relative; right: 6.5px;"> Resource Library / Sources </h1>
 
         <div class="breathing-room"></div>
+
+        <div class="main-text-container">
 
         <!-- <ul>
             <li> 
