--- a/html/about.html
+++ b/html/about.html
@@ -36,9 +36,9 @@
 
                 <a href="intro-to-alt-text.html"> <li>An introduction to alt text</li> </a> 
 
-                <!-- <a href="workshop.html"> <li> Workshop </li> </a> -->
-
                 <a href="practice.html"> <li>Practice</li> </a> 
+
+                <a href="workshop.html"> <li> Workshop </li> </a>
 
                 <a href="resource-library.html"> <li>Resource Library</li> </a> 
 
@@ -65,9 +65,9 @@
         
         I've included a couple of things in this website.  I've first included a summary of information that I've encountered about alt text / image descriptions, doing my best to both define them and give examples of what those can look like. This is the <a href="intro-to-alt-text.html"> Introduction to alt text</a> section. <br><br>
 
-        <!-- After that, I've included an outline of a workshop that you can do on your own time (either by yourself or with others), if you want to get some hands on practice with alt text and image descriptions. This is the <a href="workshop.html">Workshop</a> page. <br><br> -->
+       After that, I've included a place where you can practice here on this website with pictures I found in magazines / online. This is the <a href="practice.html"> Practice</a> page. <br><br>
 
-        I've also included a place where you can practice here on this website with pictures I found in magazines / online. This is the <a href="practice.html"> Practice</a> page. <br><br>
+       I've also included an outline of a workshop that you can do on your own time (either by yourself or with others), if you want to get some more hands on practice with alt text and image descriptions. This is the <a href="workshop.html">Workshop</a> page. <br><br>
 
        Lastly, I've shared my sources. This is the <a href="resource-library.html"> Resource Library</a> page.
         <br><br>
