--- a/html/practice.html
+++ b/html/practice.html
@@ -41,9 +41,9 @@
 
                 <a href="intro-to-alt-text.html"> <li>An introduction to alt text</li> </a> 
 
-                <!-- <a href="workshop.html"> <li> Workshop </li> </a> -->
-
                 <a href="practice.html"> <li>Practice</li> </a> 
+
+                <a href="workshop.html"> <li> Workshop </li> </a>
 
                 <a href="resource-library.html"> <li>Resource Library</li> </a> 
 
@@ -62,44 +62,44 @@
         <p> 
             Click on the photo you'd like to practice describing. </p>
 
-        <div class="practice-photo-container">
+        <figure class="image-center">
             <a href="ladybugsondaisies.html">
                 <img class="practice-photo" src="../pics/scans/ladybugs-on-daisies.png" alt="2 ladybugs visit white daisies in front of wooden fence with peeling green paint." style="width: 60%; margin-top: 40px; margin-bottom: 40px; border: 2px solid;">
-            </a>
+            </figure>
 
         </div> <!-- practice photo container -->
 
-        <div class="practice-photo-container">
+        <figure class="image-center">
             <a href="dalmation-leaping-through-air.html">
                 <img class="practice-photo" src="../pics/scans/dalmation-leaping-through-air.png" alt="Dalmation soars through the air, mid-leap." style="width: 60%; margin-top: 40px; margin-bottom: 40px; border: 2px solid;">
             </a>
-        </div>
+        </figure>
 
-        <div class="practice-photo-container">
+        <figure class="image-center">
             <a href="geese-in-golden-sky.html">
                 <img class="practice-photo" src="../pics/scans/geese-flying-through-a-golden-sky.png" alt="Geese flying through a golden sky." style="width: 60%; margin-top: 40px; margin-bottom: 40px; border: 2px solid;">
             </a>
-        </div>
+        </figure>
 
 
-        <div class="practice-photo-container">
+        <figure class="image-center">
             <a href="sunflowers.html">
                 <img class="practice-photo" src="../pics/scans/giant-sunflowers-against-blue-sky.jpg" alt="Giant sunflowers against a bright blue sky." style="width: 60%; margin-top: 40px; margin-bottom: 40px; border: 2px solid;">
             </a>
-        </div>
+        </figure>
 
 
-        <div class="practice-photo-container">
+        <figure class="image-center">
             <a href="penguins.html">
                 <img class="practice-photo" src="../pics/scans/penguins.jpg" alt="Group of penguins standing on a rocky surface in front of calm water that reflects their images like a mirror." style="width: 40%; margin-top: 40px; margin-bottom: 40px; border: 2px solid;">
             </a>
-        </div>
+        </figure>
 
-        <div class="practice-photo-container">
+        <figure class="image-center">
             <a href="puppies.html">
                 <img class="practice-photo" src="../pics/scans/yellow-lab-puppies.png" alt="3 yellow lab puppies peeking out of a barn." style="width: 40%; margin-top: 40px; margin-bottom: 40px; border: 2px solid;">
             </a>
-        </div>
+        </figure>
 
 
             <a href="ripple.html">
@@ -131,7 +131,7 @@
             Next page
             
              <button class="next-page-button">
-                 <a href="resource-library.html">Resource library</a>
+                 <a href="workshop.html">Workshop</a>
              </button>
          </div>
 
