--- a/html/resource-library.html
+++ b/html/resource-library.html
@@ -36,9 +36,9 @@
 
                 <a href="intro-to-alt-text.html"> <li>An introduction to alt text</li> </a> 
 
-                <!-- <a href="workshop.html"> <li> Workshop </li> </a> -->
-
                 <a href="practice.html"> <li>Practice</li> </a> 
+
+                <a href="workshop.html"> <li> Workshop </li> </a>
 
                 <a href="resource-library.html"> <li>Resource Library</li> </a> 
 
@@ -67,8 +67,32 @@
                 <a href="https://alt-text-as-poetry.net/" target="_blank" rel="noreferrer noopener">  Alt Text as Poetry </a> 
                 <ul>
                     <li>
-                Really lovely project by Bojana Coklyat and Shannon Finnegan. Encourages people to put more care and attention into alt text / image description - going further than just "checking a compliance box" and moreso trying to build digital spaces that screen reader users would actually want to spend time in.
+                Really lovely project by <a href="https://blindambitionjc.com/"target="_blank" rel="noopener noreferrer">Bojana Coklyat</a> and <a href="https://shannonfinnegan.com/"target="_blank" rel="noopener noreferrer">Shannon Finnegan</a>. Encourages people to put more care and attention into alt text / image description - going further than just "checking a compliance box" and moreso trying to build <!-- digital spaces that screen reader users would actually want to spend time in.--> richer digital spaces for screen reader users - ones that would not only make them feel welcome, considered, and included but the idea is to create spaces that screen reader users would actually want to spend time in.
                     </li>
+                    <ul>
+                        <li>I was heavily inspired by <i>Alt Text as Poetry</i> when making this project. The <a href="workshop.html">Workshop</a> section of this website and the questions included in the <a href="practice.html">Practice</a> page were inspired by their Workbook, which is free to access in various contexts:
+                            <ul>
+                                <li>
+                                    <a href="https://alt-text-as-poetry.net/assets/Alt-Text-as-Poetry-Workbook-PDF-2020-12-01.pdf" target="_blank" rel="noopener noreferrer">
+                                        view workbook as PDF
+                                    </a>
+                                </li>
+                                
+                                <li>
+                                    <a href="https://docs.google.com/document/d/15oSMuDX5OnYaJ6ZTe5QVTC2fB7kE-EDY5wPQMmD-3BA/edit#heading=h.tg0wt5ug3p5k" target="_blank" rel="noopener noreferrer">
+                                        view workbook as Google Doc
+                                    </a>
+                                </li>
+
+                                <li>
+                                    <a href="https://soundcloud.com/alt-text-as-poetry/sets/alt-text-as-poetry-workbook" target="_blank" rel="noopener noreferrer"> 
+                                    listen to workbook on SoundCloud
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+
 
 
                         <!-- <ul>
@@ -149,7 +173,7 @@
             <li>
                 <a href="https://webaim.org/techniques/alttext/" target="_blank" rel="noreferrer noopener"> Alternative Text</a>
                 <ul>
-                    <li>Article from <a href="https://webaim.org/" target="_blank" rel="noopener noreferrer">WebAIM</a>, which stands for Web Accessibility in Mind. WebAIM is a widely respected organization that focuses on digital accessibility. They offer all sorts of helpful tools such as this <a href="https://webaim.org/resources/contrastchecker/" target="_blank" rel="noopener noreferrer">color contrast checker</a> where you can check to see if a pair of colors has enough contrast between them in order to be accessible. They also have this really neat tool called <a href="https://wave.webaim.org/" target="_blank" rel="noopener noreferrer"> WAVE</a> which is an accessibility evaluation tool that you can use to check your website for accessibility errors / issues. You can simply copy and paste your published website URL on <a href="https://wave.webaim.org/" target="_blank" rel="noopener noreferrer"> this website</a>, and the WAVE tool will point out accessibility errors / concerns and you can even read more about what they mean. You can also add it as a browser extension so that you can access the WAVE tool quickly.
+                    <li>Article from <a href="https://webaim.org/" target="_blank" rel="noopener noreferrer">WebAIM</a>, which stands for Web Accessibility in Mind. WebAIM is a widely respected organization that focuses on digital accessibility. They offer all sorts of helpful tools such as this <a href="https://webaim.org/resources/contrastchecker/" target="_blank" rel="noopener noreferrer">color contrast checker</a> where you can check to see if a pair of colors has enough contrast between them in order to be accessible.<br><br> They also have this really neat tool called <a href="https://wave.webaim.org/" target="_blank" rel="noopener noreferrer"> WAVE</a> which is an accessibility evaluation tool that you can use to check your website for accessibility errors / issues. You can simply copy and paste your published website URL on <a href="https://wave.webaim.org/" target="_blank" rel="noopener noreferrer"> this website</a>, and the WAVE tool will point out accessibility errors / concerns and you can even read more about what they mean. You can also add it as a browser extension so that you can access the WAVE tool quickly.
                     </li>
                 </ul>
             </li>
@@ -238,7 +262,10 @@
         <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
         <p>(Click on GIF to pause)</p>
-        <p>GIF description: Looney Tunes ending credits. The words "That's all, folks!" appear in white, cursive letters in front of a circular, black and red background.
+        <p style="margin-bottom: 40px;">GIF description: Looney Tunes ending credits. The words "That's all, folks!" appear in white, cursive letters in front of a circular, black and red background.</p>
+
+
+        <p style="padding: 20px; border: 2px solid; border-radius: 3px;">*** <i>DISCLAIMER:</i> I did not take the photos that I've used in this website. Most of them are scans of photos found in magazines (a few of them were found in books). I do not take credit for any of the photography displayed in this website. ***</p>
 
     </div>
 </div>
