--- a/html/workshop.html
+++ b/html/workshop.html
@@ -182,7 +182,7 @@
     <figure>
         <img src="../pics/my-zine-workshop.jpg" alt="Zine on table." style="width: 80%; border: 2px solid; margin-bottom: 10px;">
 
-        <figcaption style="text-align: left; margin-top: 15px;max-width: 700px;"> <i>Image description:</i> A paper zine lays open on a table. There are 3 magazine cut-outs glued into the zine, each with  handwritten corresponding image descriptions. The first image description reads: 'Two cows facing each other, standing next to a pond under a blue sky'. The second image description reads: 'A group of dolphins swimming in the ocean'. The third image description reads: 'A crow'.
+        <figcaption style="text-align: left; margin-top: 15px;"> <i>Image description:</i> A paper zine lays open on a table. There are 3 magazine cut-outs glued into the zine, each with  handwritten corresponding image descriptions. The first image description reads: 'Two cows facing each other, standing next to a pond under a blue sky'. The second image description reads: 'A group of dolphins swimming in the ocean'. The third image description reads: 'A crow'.
         </figcaption>
     </figure>
 
