--- a/html/workshop.html
+++ b/html/workshop.html
@@ -18,6 +18,12 @@
 
 <div class="main-container">
 
+    <div class="mobile-tablet">
+        <p style="padding: 20px;">Please view <br> <i>https://andrewsmr2.github.io/one-thousand-words/ </i> <br> on a laptop / desktop computer. <br>
+        Thanks!
+        </p>
+    </div>
+
     <div class="left-section">
         <div class="top-menu" id="topMenu">
             <button class="menu-button move-text" onclick="toggleMenu()"> &#9776; Menu </button>
@@ -46,9 +52,10 @@
     <div class="middle-section">
     
         <h1 style="text-align: center;">Workshop</h1>
-        <div class="main-text-container">
 
         <div class="breathing-room"></div>
+        
+        <div class="main-text-container">
 
         <p>I’ve created a workshop that you can do on your own time (either by yourself or with others), as a way to spend a little more time with the topics of alt text / image description and to get a little more practice. </p>
 
